--- a/ruqqus/templates/submission_listing.html
+++ b/ruqqus/templates/submission_listing.html
@@ -65,14 +65,14 @@
 
   {% else %}
 
-  <div id="post-{{ p.base36id }}-up" tabindex="0" class="mx-auto arrow-up" data-toggle="modal" data-target="#loginModal"></div>
+  <div id="post-{{ p.base36id }}-up" tabindex="0" class="mx-auto arrow-up" onclick="location.href='/login';"></div>
 
   <span id="post-{{ p.base36id }}-score-up" class="score-up{% if voted!=1 %} d-none{% endif %}">{% if p.is_banned %}✖{% else %}{{ score+1-adjust }}{% endif %}</span>
   <span id="post-{{ p.base36id }}-score-none" class="score{% if voted!=0 and voted!=-2 %} d-none{% endif %}">{% if p.is_banned %}✖{% else %}{{ score-adjust }}{% endif %}</span>
   <span id="post-{{ p.base36id }}-score-down" class="score-down{% if voted!=-1 %} d-none{% endif %}">{% if p.is_banned %}✖{% else %}{{ score-1-adjust }}{% endif %}</span>
 
 
-  <div id="post-{{ p.base36id }}-down" tabindex="0" class="text-muted mx-auto arrow-down" data-toggle="modal" data-target="#loginModal"></div>
+  <div id="post-{{ p.base36id }}-down" tabindex="0" class="text-muted mx-auto arrow-down" onclick="location.href='/login';"></div>
 
   {% endif %}
 
