--- a/ruqqus/templates/submission_listing.html
+++ b/ruqqus/templates/submission_listing.html
@@ -97,6 +97,7 @@
           <i class="fas fa-ellipsis-h"></i>
         </a>
       </li>
+      {% if v %}
       <li id="voting-{{ p.base36id }}-mobile" class="voting list-inline-item d-md-none">
         <span id="arrow-{{ p.base36id }}-mobile-up" class="mr-2 arrow-mobile-up" onclick="vote('{{ p.base36id }}','0')">
           <i class="fas fa-arrow-alt-up mx-0" aria-hidden="true"></i>
@@ -113,6 +114,24 @@
           <i class="fas fa-arrow-alt-down mx-0" aria-hidden="true"></i>
         </span>
       </li>
+      {% else %}
+      <li id="voting-{{ p.base36id }}-mobile" class="voting list-inline-item d-md-none">
+        <span id="arrow-{{ p.base36id }}-mobile-up" class="mr-2 arrow-mobile-up" onclick="location.href='/login';">
+          <i class="fas fa-arrow-alt-up mx-0" aria-hidden="true"></i>
+        </span>
+
+
+
+        <span id="post-{{ p.base36id }}-score-mobile-up" class="score-up text-muted d-none">{{ score+1 }}</span>
+        <span id="post-{{ p.base36id }}-score-mobile-none" class="score text-muted">{{ score }}</span>
+        <span id="post-{{ p.base36id }}-score-mobile-down" class="score-down text-muted d-none">{{ score-1 }}</span>
+
+
+        <span id="arrow-{{ p.base36id }}-mobile-down" class="arrow-mobile-down ml-2 my-0" onclick="location.href='/login';">
+          <i class="fas fa-arrow-alt-down mx-0" aria-hidden="true"></i>
+        </span>
+      </li>
+      {% endif %}
     </ul>
   </div>
 </div>
