--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -139,6 +139,8 @@
 
         <!-- Voting on "medium" devices or larger, hidden on smaller devices -->
 
+        {% if v %}
+
         <div id="voting" class="voting d-none d-md-block my-auto mr-3">
             <div id="post-{{ p.base36id }}-up" class="arrow-up mx-auto" {% if voted==1 %}onclick="vote('{{ p.base36id }}','0')"{% elif voted>-2 %}onclick="vote('{{ p.base36id }}','1')"{% endif %}>
             </div>
@@ -148,6 +150,20 @@
             <div id="post-{{ p.base36id }}-down" class="arrow-down mx-auto" {% if voted==-1 %}onclick="vote('{{ p.base36id }}','0')"{% elif voted>-2 %}onclick="vote('{{ p.base36id }}','-1')"{% endif %}>
             </div>
         </div>
+
+        {% else %}
+
+        <div id="voting" class="voting d-none d-md-block my-auto mr-3">
+            <div id="post-{{ p.base36id }}-up" class="arrow-up mx-auto" onclick="location.href='/login';">
+            </div>
+            <span id="post-{{ p.base36id }}-score-up" class="score-up text-muted{% if voted!=1 %} d-none{% endif %}">{{ score+1-adjust }}</span>
+            <span id="post-{{ p.base36id }}-score-none" class="score text-muted{% if voted!=0 and voted!=-2 %} d-none{% endif %}">{{ score-adjust }}</span>
+            <span id="post-{{ p.base36id }}-score-down" class="score-down text-muted{% if voted!=-1 %} d-none{% endif %}">{{ score-1-adjust }}</span>
+            <div id="post-{{ p.base36id }}-down" class="arrow-down mx-auto" onclick="location.href='/login';">
+            </div>
+        </div>
+
+        {% endif %}
 
     </div>
 
