--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -254,9 +254,15 @@
                   </a>
               </li>
               <li id="voting-{{ p.base36id }}-mobile" class="voting list-inline-item d-md-none">
+              {% if v %}
                 <span id="arrow-{{ p.base36id }}-mobile-up" class="mr-2 arrow-mobile-up" onclick="vote('{{ p.base36id }}','0')">
                     <i class="fas fa-arrow-alt-up mx-0" aria-hidden="true"></i>
                 </span>
+                {% else %}
+                <span id="arrow-{{ p.base36id }}-mobile-up" class="mr-2 arrow-mobile-up" onclick="location.href='/login';">
+                    <i class="fas fa-arrow-alt-up mx-0" aria-hidden="true"></i>
+                </span>
+                {% endif %}
 
 
 
@@ -264,10 +270,15 @@
                 <span id="post-{{ p.base36id }}-score-mobile-none" class="score text-muted">{{ score }}</span>
                 <span id="post-{{ p.base36id }}-score-mobile-down" class="score-down text-muted d-none">{{ score-1 }}</span>
 
-
+                {% if v %}
                 <span id="arrow-{{ p.base36id }}-mobile-down" class="arrow-mobile-down ml-2 my-0" onclick="vote('{{ p.base36id }}','-1')">
                     <i class="fas fa-arrow-alt-down mx-0" aria-hidden="true"></i>
                 </span>
+                {% else %}
+                <span id="arrow-{{ p.base36id }}-mobile-down" class="arrow-mobile-down ml-2 my-0" onclick="location.href='/login';">
+                    <i class="fas fa-arrow-alt-down mx-0" aria-hidden="true"></i>
+                </span>
+                {% endif %}
             </li>
         </ul>
     </div>
