--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -219,7 +219,7 @@
 
 
             </div>
-            
+
             {% if p.body_html %}
             <div class="post-body mt-3"> 
               {{ p.body_html | safe }}
@@ -228,7 +228,7 @@
             {% endif %}
 
             {% if p.domain == "youtube.com" or p.domain == "m.youtube.com" %}
-            <div class="mb-3">
+            <div class="post-body mt-3"> 
               <iframe width="100%" height="475" src="{{ p.url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;" allowfullscreen></iframe>
             </div>
             {% endif %}
