--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -70,12 +70,12 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-5 col-lg-6 text-right">
-                    <img src="images/post.svg" class="img-fluid mb-3 mt-6 mt-md-0" data-aos="zoom-out">
-                    <img src="images/reply_upvoted_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
+                    <img src="/illustrations/images/post.svg" class="img-fluid mb-3 mt-6 mt-md-0" data-aos="zoom-out">
+                    <img src="/illustrations/images/reply_upvoted_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
                         data-aos="fade-up" data-aos-delay="500">
-                    <img src="images/reply_downvoted_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
+                    <img src="/illustrations/images/reply_downvoted_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
                         data-aos="fade-up" data-aos-delay="1000">
-                    <img src="images/reply_neutral_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
+                    <img src="/illustrations/images/reply_neutral_1.svg" class="img-fluid mb-3" data-aos-easing="ease-in-out"
                         data-aos="fade-up" data-aos-delay="1500">
                 </div>
             </div>
