--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -124,7 +124,7 @@
                 <div class="row justify-content-around">
                     <div class="col-10 col-md-3" data-aos="fade-up">
     
-                        <i class="fad fa-universal-access text-primary text-lg"></i>
+                        <i class="fad fa-universal-access text-primary mb-3" style="font-size: 3rem;"></i>
     
                         <h3 class="h5 mb-3">
                             Independent
@@ -138,7 +138,7 @@
                     </div>
                     <div class="col-10 col-md-3" data-aos="fade-up" data-aos-delay="100">
     
-                        <i class="fad fa-beer text-primary text-lg"></i>
+                        <i class="fad fa-beer text-primary mb-3" style="font-size: 3rem;"></i>
     
                         <h3 class="h5 mb-3">
                             Free
@@ -152,7 +152,7 @@
                     </div>
                     <div class="col-10 col-md-3" data-aos="fade-up" data-aos-delay="100">
     
-                        <i class="fad fa-user-secret text-primary text-lg"></i>
+                        <i class="fad fa-user-secret text-primary mb-3" style="font-size: 3rem;"></i>
     
                         <h3 class="h5 mb-3">
                             Privacy-focused
