--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -44,13 +44,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Twitter</a>
+                        <a class="nav-link" href="https://www.twitter.com/ruqqus">Twitter</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                         you like or dislike, and engage in uncensored discussion with the community.
                     </p>
                     <div>
-                        <a href="#" class="btn btn-lg btn-white">Create account</a>
+                        <a href="/signup" class="btn btn-lg btn-white">Create account</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-5 col-lg-6 text-right">
@@ -1096,10 +1096,10 @@ def frontlist(sort = "hot", page = 1):
                     <div class="card bg-white shadow-sm w-100" style="width: 24rem;">
                         <div class="card-body">
                             <h5 class="card-title text-primary">Create your account</h5>
-                            <form action="/signup" method="post">
+                            <form action="/signup" method="post" class="mt-3" id="signup">
 
-                                <input type="hidden" name="formkey" value="6c7963988201321621da247c28cb3972">
-                                <input type="hidden" name="now" value="1563891643">
+                                <input type="hidden" name="formkey" value="{{ formkey }}">
+                                <input type="hidden" name="now" value="{{ now }}">
 
                                 <label for="username" class="mt-3">Username</label>
 
@@ -1136,7 +1136,7 @@ def frontlist(sort = "hot", page = 1):
 
                                 </div>
 
-                                <input class="btn btn-primary btn-block register mt-3" type="submit" value="Register">
+                                <button class="btn btn-primary login w-100 mt-3" id="register_button">Register</button>
 
                             </form>
                         </div>
@@ -1177,6 +1177,10 @@ def frontlist(sort = "hot", page = 1):
     <!-- Initialize BS 4 tool tips -->
 
     <script src="/assets/js/tooltips.js"></script>
+
+    <!-- Sign up script -->
+    
+    <script src="/assets/js/signup.js"></script>
 
     <!-- AOS Animate -->
 
