--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -232,7 +232,7 @@
             {% endif %}
 
             {% if p.embed_url %}
-            <iframe src="{{ p.embed_url }}">
+            <iframe src="{{ p.embed_url }}"></iframe>
             {% endif %}
 
           </div>
