--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -232,7 +232,9 @@
             {% endif %}
 
             {% if p.embed_url %}
+            <div class="post-body mt-3"> 
             <iframe src="{{ p.embed_url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%; height: 475px;"></iframe>
+            </div>
             {% endif %}
 
           </div>
