--- a/ruqqus/templates/submission.html
+++ b/ruqqus/templates/submission.html
@@ -234,7 +234,7 @@
             {% if p.embed_url %}
             <div class="post-body mt-3"> 
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe src="{{ p.embed_url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="width: 100%; height: 475px;"></iframe>
+              <iframe src="{{ p.embed_url }}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
             </div>
             {% endif %}
