--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1082,7 +1082,7 @@ def frontlist(sort = "hot", page = 1):
 
             <div class="row justify-content-around align-items-center">
 
-                <div class="col-12 col-md-6">
+                <div class="col">
 
                     <h2 class="text-center text-md-left text-dark">Make a Ruqqus today.</h2>
                     <p class="text-center text-md-left text-dark mb-6 mb-md-0">Sign up and become part of the community
@@ -1091,58 +1091,13 @@ def frontlist(sort = "hot", page = 1):
 
                 </div>
 
-                <div class="col-12 col-md-4">
+            </div>
 
-                    <div class="card bg-white shadow-sm w-100" style="width: 24rem;">
-                        <div class="card-body">
-                            <h5 class="card-title text-primary">Create your account</h5>
-                            <form action="/signup" method="post" class="mt-3" id="signup">
+            <div class="row justify-content-around align-items-center">
 
-                            <span class="text-danger">{{ error }}</span><br>
+                <div class="col">
 
-                                <input type="hidden" name="formkey" value="{{ formkey }}">
-                                <input type="hidden" name="now" value="{{ now }}">
-
-                                <label for="username" class="mt-3">Username</label>
-
-                                <input class="form-control" id="username-register"
-                                    aria-describedby="usernameHelpRegister" type="text" name="username" required="">
-                                <small id="usernameHelpRegister"
-                                    class="form-text font-weight-bold text-muted d-none mt-1">Minimum of 5 characters
-                                    required.</small>
-                                <small id="usernameHelpSuccess"
-                                    class="form-text font-weight-bold text-success d-none mt-1">That username is A-okay!
-                                </small>
-
-                                <label for="email" class="mt-3">Email Address</label>
-
-                                <input class="form-control" id="email-register"
-                                    aria-describedby="emailHelpRegister" type="text" name="email" required="">
-
-                                <label for="password" class="mt-3">Password</label>
-
-                                <input class="form-control" id="password-register"
-                                    aria-describedby="passwordHelpReigster" type="password" name="password" required="">
-                                <small id="passwordHelpRegister"
-                                    class="form-text font-weight-bold text-muted d-none mt-1">Minimum of 8
-                                    characters
-                                    required.</small>
-                                <small id="passwordHelpSuccess"
-                                    class="form-text font-weight-bold text-success d-none mt-1">Your password meets the
-                                    requirements.
-                                </small>
-
-                                <div class="text-center mt-2">
-
-                                    <small>By registering, you agree to the <a href="#">Terms</a>.</small>
-
-                                </div>
-
-                                <button class="btn btn-primary login w-100 mt-3" id="register_button">Register</button>
-
-                            </form>
-                        </div>
-                    </div>
+                    <a href="/signup" class="btn btn-primary bt-lg">Join Ruqqus</a>
 
                 </div>
 
