--- a/ruqqus/templates/about/about.html
+++ b/ruqqus/templates/about/about.html
@@ -1080,12 +1080,12 @@ def frontlist(sort = "hot", page = 1):
 
         <div class="container">
 
-            <div class="row justify-content-around align-items-center">
+            <div class="row justify-content-around align-items-center mb-3">
 
-                <div class="col">
+                <div class="col col-md-6">
 
-                    <h2 class="text-center text-md-left text-dark">Make a Ruqqus today.</h2>
-                    <p class="text-center text-md-left text-dark mb-6 mb-md-0">Sign up and become part of the community
+                    <h2 class="text-center text-dark">Make a Ruqqus today.</h2>
+                    <p class="text-center text-dark mb-6 mb-md-0">Sign up and become part of the community
                         in less than 17.76 seconds.
                     </p>
 
@@ -1093,9 +1093,9 @@ def frontlist(sort = "hot", page = 1):
 
             </div>
 
-            <div class="row justify-content-around align-items-center">
+            <div class="row justify-content-around align-items-center text-center">
 
-                <div class="col">
+                <div class="col col-md-6">
 
                     <a href="/signup" class="btn btn-primary bt-lg">Join Ruqqus</a>
 
